--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# kiro
+/.kiro
+
+# sensitive docs
+/docs/sensitive
+/supabase/.temp
