Security: Clarify service role key should NOT be used in frontend
- Updated validate-env.js to separate server-only variables
- Marked SUPABASE_SERVICE_ROLE_KEY as optional and server-only
- Added warnings that it should never be exposed to client
- Updated .env.example with security warnings
- Updated VERCEL_DEPLOYMENT_GUIDE.md to NOT include service role key
- Created SECURITY.md with comprehensive security guidelines
- Clarified that current app is frontend-only and doesn't need service role key

The application uses:
✅ Client-side Supabase with anon key
✅ Row Level Security (RLS) for data protection
❌ No server-side API routes requiring service role key

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # Required Variables
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Server-Only Variables (Optional - NOT USED in current frontend-only deployment)
+# ⚠️ WARNING: NEVER expose this to the client! Only use in server-side API routes.
+# Leave empty for frontend-only deployments (like Vercel static hosting)
 SUPABASE_SERVICE_ROLE_KEY=
 
 # Application Settings
